--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
+    "fetch-jsonp": "^1.1.3",
     "sass-loader": "^7.1.0",
     "vue": "^2.5.21",
     "vue-router": "^3.0.2"
